fix: Layout align center Youtube iframe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,12 +209,14 @@ article {
   padding-bottom: 56.25%;
   overflow: hidden;
   text-align: center;
+  max-width: 1061px;
 }
 
 iframe {
   position: absolute;
   top: 0;
   left: 0;
+  display: block;
   width: 100%;
   height: 100%;
 }
@@ -372,15 +374,19 @@ footer a:hover {
     margin: 0 7%;
   }
 
+  .video-title {
+    max-width: 1061px;
+    margin: 0 auto;
+  } 
+
   /* video section */
   .video-container {
     padding-bottom: 597px;
+    margin: 0 auto;
   }
 
   iframe {
-    max-width: 1061px;
-    max-height: 597px;
-    text-align: center;
-    padding: 0 auto;
+    width: 1061px;
+    height: 597px;
   }
 }
